--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,19 +1,12 @@
 [project]
-name = "repl-nix-workspace"
+name = "urlninja"
 version = "0.1.0"
 description = "Add your description here"
-requires-python = ">=3.11"
+readme = "README.md"
+requires-python = ">=3.12"
 dependencies = [
-    "asgiref>=3.8.1",
-    "email-validator>=2.2.0",
     "fastapi>=0.115.12",
-    "flask>=3.1.0",
-    "flask-sqlalchemy>=3.1.1",
-    "gunicorn>=23.0.0",
     "jinja2>=3.1.6",
-    "psycopg2-binary>=2.9.10",
-    "pydantic>=2.11.3",
     "python-multipart>=0.0.20",
-    "starlette>=0.46.2",
-    "uvicorn[standard]>=0.34.1",
+    "uvicorn>=0.34.2",
 ]
